<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ab2016.neval.ilkuygulama.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tv_title"
        android:textColor="#F00"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="6">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tv1_txt"
                android:textColor="#F00"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spin1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:entries="@array/yemeksepeti"
                android:spinnerMode="dialog" />
        </TableRow>

        <TableRow android:gravity="center">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/hamburger" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/tv2_txt"
                android:textColor="#F00"
                android:id="@+id/tv_seek"
                android:textSize="15sp" />

            <SeekBar
                android:id="@+id/seek1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:max="4"
                android:progress="2" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:onClick="onClick"
                android:text="@string/btn1_txt"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:onClick="onClick"
                android:text="@string/btn2_txt"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:checked="true"
            android:text="@string/rdb1_txt" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdb2_txt" />
    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="true"
        android:id="@+id/chk"
        android:text="@string/check_txt" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="onClick"
            android:text="@string/btn3_txt"
            android:textSize="15sp" />
    </RelativeLayout>
</LinearLayout>
